--- a/workshop24/src/main/resources/application.properties
+++ b/workshop24/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/northwind
 spring.datasource.username=fred
 spring.datasource.password=fredfred
+
+spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:static/schema.sql
